# otter-browser

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  HACKING  INSTALL  INSTALL.md  README.md  TODO  config.h.cmake  config.h.qmake  otter-browser.desktop  otter-browser.rc  otter-browser.spec  otter.pro  qoper.pro
.github/workflows/: ci_build.yaml
cmake/: Dependencies.cmake  FindHunspell.cmake  MacOSXBundleInfo.plist.in
man/: otter-browser.1
packaging/: deploy.py  otter-browser.appdata.xml  otter-browser.iss  otter-browser.ps1  otter-browser.sh  otter-browser.spec  otter.spec  ubuntu-ppa.sh
packaging/debian/: changelog  control  copyright  docs  otter-browser.postinst  otter-browser.prerm
packaging/inno/: gpl3.rtf
resources/: resources.qrc
resources/adblock/: abpindo.txt  adblock.txt  adblock_bg.txt  adblock_polska.txt  advblock.txt  easylist.txt  easylistchina.txt  easylistdutch.txt  easylistgermany.txt  easylisthebrew.txt  easylistitaly.txt  easylistlithuania.txt  filters.txt  latvian-list.txt  liste_ar.txt  liste_fr.txt
resources/blocking/: arabic.txt  chinese.txt  dutch.txt  easylist.txt  easyprivacy.txt  french.txt  german.txt  hebrew.txt  indonesian.txt  italian.txt  latvian.txt  lithuanian.txt  polish.txt  russian.txt
resources/contentBlocking/: advertisements.adblock-killer-filters.txt  advertisements.antiadblockfilters.txt  annoyance.fanboy-annoyance.txt  annoyance.obtrusive.txt  privacy.enhancedstats.txt  regional.bulgarian.txt  regional.chinese.txt  regional.czechAndSlovak.txt  regional.danish.txt  regional.dutch.txt  regional.estonian.txt  regional.french.txt  regional.german.txt  regional.greek.txt  regional.hebrew.txt  regional.hungary.txt  regional.indonesian.txt  regional.italian.txt  regional.latvian.txt  regional.lithuanian.txt  regional.polish.txt  regional.russian.txt  regional.spanish.txt  regional.swedish.txt  social.fanboy-antifacebook.txt  social.fanboy-social.txt
resources/files/: error.html  listing.html  options.ini
resources/gestures/: default.ini
resources/icons/: otter-browser.icns
resources/keyboard/: default.ini  default.json  platform.ini
resources/macros/: default.ini  platform.ini
resources/menu/: menuBar.json  menuButton.json  quickPreferences.json  webWidget.json
resources/mouse/: default.ini  default.json
resources/other/: adblock.ini  contentBlocking.json  fastforward.ini  fastforward.js  handlers.ini  menuBar.json  menuButton.json  notifications.ini  proxies.json  syntaxHighlighting.json  toolBars.json  userAgents.ini  userAgents.json
resources/schemas/: bookmarks.sql  browsingHistory.sql  options.ini  update.xsd
resources/searchEngines/: bing.xml  duckduckgo.xml  google.xml  startpage.xml  w3c-css.xml  w3c-markup.xml  wikipedia.xml  yahoo.xml  yandex.xml  youtube.xml
resources/searches/: bing.xml  duckduckgo.xml  google.xml  startpage.xml  wikipedia.xml  yahoo.xml  yandex.xml  youtube.xml
resources/style/: start-page.svgz
resources/translations/: cs_CZ.ts  de_DE.ts  en_GB.ts  et.ts  fr_FR.ts  id_ID.ts  it_IT.ts  lt.ts  nl.ts  otter-browser_ar.qm  otter-browser_ar.ts  otter-browser_bg.qm  otter-browser_bg.ts  otter-browser_ca_ES.ts  otter-browser_cs.qm  otter-browser_cs.ts  otter-browser_cs_CZ.qm  otter-browser_cs_CZ.ts  otter-browser_da.qm  otter-browser_da.ts  otter-browser_de.qm  otter-browser_de.ts  otter-browser_de_DE.qm  otter-browser_de_DE.ts  otter-browser_el.qm  otter-browser_el.ts  otter-browser_en_CA.qm  otter-browser_en_CA.ts  otter-browser_en_GB.qm  otter-browser_en_GB.ts  otter-browser_en_US.qm  otter-browser_en_US.ts  otter-browser_es.qm  otter-browser_es.ts  otter-browser_es_ES.qm  otter-browser_es_ES.ts  otter-browser_es_MX.qm  otter-browser_es_MX.ts  otter-browser_et.qm  otter-browser_et.ts  (+108 more)
src/: main.cpp
src/core/: Action.cpp  Action.h  ActionExecutor.cpp  ActionExecutor.h  ActionsManager.cpp  ActionsManager.h  AdblockContentFiltersProfile.cpp  AdblockContentFiltersProfile.h  Addon.cpp  Addon.h  AddonsManager.cpp  AddonsManager.h  AddressCompletionModel.cpp  AddressCompletionModel.h  Application.cpp  Application.h  BookmarksImporter.cpp  BookmarksImporter.h  BookmarksManager.cpp  BookmarksManager.h  BookmarksModel.cpp  BookmarksModel.h  Console.cpp  Console.h  ContentBlockingList.cpp  ContentBlockingList.h  ContentBlockingManager.cpp  ContentBlockingManager.h  ContentBlockingProfile.cpp  ContentBlockingProfile.h  (+114 more)
src/modules/backends/web/qtwebengine/: CMakeLists.txt  QtWebEnginePage.cpp  QtWebEnginePage.h  QtWebEngineResources.qrc  QtWebEngineTransfer.cpp  QtWebEngineTransfer.h  QtWebEngineUrlRequestInterceptor.cpp  QtWebEngineUrlRequestInterceptor.h  QtWebEngineWebBackend.cpp  QtWebEngineWebBackend.h  QtWebEngineWebWidget.cpp  QtWebEngineWebWidget.h
src/modules/backends/web/qtwebengine/resources/: createSearch.js  getActiveStyleSheet.js  getLinks.js  getStyleSheets.js  hideBlockedRequests.js  hideElements.js  hitTest.js  imageViewer.js  importBookmarks.js  sendPost.js
src/modules/backends/web/qtwebkit/: CMakeLists.txt  LoadPluginWidget.cpp  LoadPluginWidget.h  PluginWidget.cpp  PluginWidget.h  QtWebKitCookieJar.cpp  QtWebKitCookieJar.h  QtWebKitFtpListingNetworkReply.cpp  QtWebKitFtpListingNetworkReply.h  QtWebKitHistoryInterface.cpp  QtWebKitHistoryInterface.h  QtWebKitInspector.cpp  QtWebKitInspector.h  QtWebKitNetworkManager.cpp  QtWebKitNetworkManager.h  QtWebKitNotificationPresenter.cpp  QtWebKitNotificationPresenter.h  QtWebKitPage.cpp  QtWebKitPage.h  QtWebKitPlugin.cpp  QtWebKitPlugin.h  QtWebKitPluginFactory.cpp  QtWebKitPluginFactory.h  QtWebKitPluginWidget.cpp  QtWebKitPluginWidget.h  QtWebKitResources.qrc  QtWebKitSpellChecker.cpp  QtWebKitSpellChecker.h  QtWebKitWebBackend.cpp  QtWebKitWebBackend.h  QtWebKitWebPage.cpp  QtWebKitWebPage.h  QtWebKitWebPluginFactory.cpp  QtWebKitWebPluginFactory.h  QtWebKitWebWidget.cpp  QtWebKitWebWidget.h  WebBackendWebKit.cpp  WebBackendWebKit.h  WebPageWebKit.cpp  WebWidgetWebKit.cpp  (+2 more)
src/modules/backends/web/qtwebkit/resources/: errorPage.js  formExtractor.js  formFiller.js  imageViewer.js  resetSpellCheck.js
(+608 files in other folders)
